Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69453

[Reg : 5.10.1-> 5.11.1] QTreeWidgetItem Partially Checked is broken

    XMLWordPrintable

Details

    • macOS
    • e20307dcfbd30fbc4f43dfb3626f440a48567416

    Description

      Setting Qt::PartiallyChecked to QTreeWidgetItem is broken in 5.11.0 and 5.11.1. 

      Steps to reproduce the issue:

      1. Execute the attached program with QT 5.10.1, all checkboxes are in the desired state. 
      2. Execute the same program with Qt 5.11.0 and 5.11.1, the third checkbox which should be in partial state, is in checked state. 

      Expected result: Partial checked checkbox should have correct state. 

      Working fine with Windows. Attaching the output snapshots also. 

      Attachments

        1. qtbug69453.zip
          1 kB
        2. qtbug69453.zip
          5 kB
        3. test-5.10.1.png
          test-5.10.1.png
          73 kB
        4. test-5.11.1.png
          test-5.11.1.png
          74 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            shmittal Shveta Mittal
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes