QMacStyle: Configure checkbox NSButton as tri-state

Qt allows this as a property of QCheckBox, so it should
be enabled in its Cocoa counterpart.

Change-Id: I88eb6dddabb173050c4fe7229f15c768181ef527
Task-number: QTBUG-69453
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>